Add a deployment stage to the pipeline2 - prod

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,7 +88,7 @@ stages:
               appName: '$(WebAppName)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
   
-- stage: 'Deploy Prod'
+- stage: 'Deploy_Prod'
   displayName: 'Deploy the web application to test'
   dependsOn: Build
   jobs:
