Add database schema checks to the pipeline 3 - Bash print variables

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -108,6 +108,8 @@ stages:
       runOnce:
         deploy:
           steps:
+          - bash: echo '$(databasename)'
+          - bash: echo '$(servername)'
           - download: current
             artifact: dropDacpac
             patterns: '**/*'
